<resources>
    <string name="app_name">NUMAD22Sp_NandishMurugeshi</string>
    <string name="about_me">About Me</string>
    <string name="no_value_string">No Value</string>
    <string name="name_email">Nandish Murugeshi \nmurugeshi.n@northeastern.edu</string>
    <string name="clicky_click">Clicky Click</string>
    <string name="pressed">Pressed %1$s</string>
    <string name="f">F</string>
    <string name="b">B</string>
    <string name="d">D</string>
    <string name="c">C</string>
    <string name="e">E</string>
    <string name="a">A</string>
    <string name="name">Nandish Murugeshi</string>
    <string name="link_collector">Link Collector</string>
    <string name="addUrl">addUrl</string>
    <string name="undo">UNDO</string>
    <string name="location">Location</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="loading">Loading</string>
    <string name="location_details">Location Details:</string>
    <string name="home_label_text">Home</string>
    <string name="at_your_service_button_label">At Your Service</string>
    <string name="event_search_button">Search</string>
    <string name="event_search_placeholder">Search for events</string>
</resources>