<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/aboutMe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="31dp"
        android:onClick="aboutMe"
        android:text="@string/about_me"
        app:layout_constraintBottom_toTopOf="@+id/link_collector"
        app:layout_constraintEnd_toStartOf="@+id/clicky_click"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clicky_click"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="31dp"
        android:onClick="clickyClick"
        android:text="@string/clicky_click"
        app:layout_constraintBottom_toTopOf="@+id/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/link_collector"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="35dp"
        android:onClick="onLinkCollector"
        android:text="@string/link_collector"
        app:layout_constraintBottom_toTopOf="@+id/at_your_service_button"
        app:layout_constraintEnd_toStartOf="@+id/location"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/location"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="82dp"
        android:onClick="onLocationClick"
        android:text="@string/location"
        app:layout_constraintBottom_toTopOf="@+id/at_your_service_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/link_collector"
        app:layout_constraintTop_toBottomOf="@+id/clicky_click" />

    <TextView
        android:id="@+id/home_label"
        android:layout_width="170dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:text="@string/home_label_text"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/at_your_service_button"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginTop="41dp"
        android:layout_marginBottom="391dp"
        android:text="@string/at_your_service_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/link_collector"
        android:onClick="onCLickAtYourService"/>

</androidx.constraintlayout.widget.ConstraintLayout>